[package]
name = "rs_rwbot"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "migrate", "macros", "runtime-tokio-native-tls", "time", "chrono"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"